--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
+    "@prisma/client": "^6.16.2",
+    "@types/bcrypt": "^6.0.0",
     "eslint": "^9.36.0",
     "prisma": "^6.16.2",
     "tsx": "^4.20.6",
@@ -26,13 +28,12 @@
     "typescript-eslint": "^8.44.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "http-status-codes": "^2.3.0",
     "ts-node-dev": "^2.0.0"
   }
 }
